# Minapari

./: README.md  pyproject.toml
docs/: api_reference.md  basic_usage.md  docking.md  examples.md  index.md  installation.md  migration.md  quickstart.md
examples/: 3d_volume.py  basic_usage.py  custom_controls.py  dockable_viewer.py  live_update.py  load_image.py  microscopy_viewer.py  multiple_viewers.py
src/minapari/: __init__.py  __init__.pyi  _event_loop.py  dockable.py  types.py  viewer.py  window.py
src/minapari/_app_model/: __init__.py  _app.py  utils.py
src/minapari/_qt/: __init__.py  qt_event_filters.py  qt_event_loop.py  qt_main_window.py  qt_viewer.py  qthreading.py  utils.py
src/minapari/_vispy/: __init__.py  camera.py  canvas.py
src/minapari/components/: __init__.py  _layer_slicer.py  _viewer_constants.py  _viewer_key_bindings.py  camera.py  cursor.py  dims.py  grid.py  layerlist.py  tooltip.py  viewer_model.py
src/minapari/errors/: __init__.py  reader_errors.py
src/minapari/layers/: __init__.py  _data_protocols.py  _layer_actions.py  _multiscale_data.py  _source.py  intensity_mixin.py
src/minapari/qt/: __init__.py  threading.py
src/minapari/resources/: __init__.py  _icons.py
src/minapari/settings/: __init__.py  _appearance.py  _application.py  _base.py  _constants.py  _experimental.py  _fields.py  _migrations.py  _napari_settings.py  _plugins.py  _shortcuts.py  _yaml.py
src/minapari/utils/: __init__.py  _base.py  _dask_utils.py  _env_detection.py  _magicgui.py  _proxies.py  _test_utils.py  _testsupport.py  _tracebacks.py  action_manager.py  camera_orientations.py  color.py  colormap_backend.py  history.py  indexing.py  info.py  interactions.py  key_bindings.py  misc.py  naming.py  notebook_display.py  progress.py  (+6 more)
(+162 files in other folders)
